[fix] Make the alerter slide under the nav menu on mobile

--- a/stylus/ui-app/layouts.styl
+++ b/stylus/ui-app/layouts.styl
@@ -43,6 +43,7 @@ $app-2panes-sticky
             left 0
             bottom 0
             width 100%
+            z-index 10
 
 // DRAWER layout
 // When you want the sidebar to act like a drawer
